# scattering_transform

./: .gitignore  SC2_README.md  pyproject.toml  requirements.txt  setup.py  test_comparison.py  test_sc2.py  test_sc2_simple.py
SC2/: __init__.py  filters.py  polyspectra.py  scattering.py  utils.py
