[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "SC2"
version = "0.1.0"
description = "Minimal Scattering Synthesis Package - A lightweight implementation for scattering transform synthesis"
readme = "SC2_README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "SC2 Contributors", email = ""},
]
keywords = ["scattering transform", "signal processing", "image synthesis", "wavelet transform"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Signal Processing",
]

dependencies = [
    "numpy>=1.20.0",
    "torch>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

test = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
]

docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/EiffL/scattering_transform"
Repository = "https://github.com/EiffL/scattering_transform"
Issues = "https://github.com/EiffL/scattering_transform/issues"

[tool.setuptools]
packages = ["SC2"]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["SC2*"]
exclude = ["tests*", "docs*", "scattering*", "old_versions*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = "-v --cov=SC2 --cov-report=term-missing"

[tool.coverage.run]
source = ["SC2"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]