[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SC2"
version = "0.1.0"
description = "Minimal Scattering Synthesis Package - A lightweight implementation for scattering transform synthesis"
readme = "SC2_README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "SC2 Contributors"},
]
keywords = ["scattering transform", "signal processing", "image synthesis", "wavelet transform"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Signal Processing",
]

dependencies = [
    "numpy>=1.20.0",
    "torch>=1.9.0",
]

[project.urls]
Homepage = "https://github.com/EiffL/scattering_transform"
Repository = "https://github.com/EiffL/scattering_transform"
Issues = "https://github.com/EiffL/scattering_transform/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["SC2", "SC2.*"]
exclude = ["tests*", "docs*", "scattering*", "old_versions*", "venv*"]